# xpbd-tissue-sim

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.CPU  Dockerfile.GPU  Dockerfile.ROS  Makefile  README.md  docker-compose-cpu.yml  docker-compose-gpu.yml  docker-compose-ros.yml  docker-compose.yml
.codemap/: float-area-03236e77-46b8-48c4-9ec4-00b61da92d8d.json  main-panel.json
config/: collision_config.yaml  config.yaml  decreasing_size_config.yaml  example_config.yaml  first_order_config.yaml  self_collision.yaml
config/beam_stretch/: beam_stretch_config.yaml  config.yaml
config/bouncing_cube/: 5cube_iter_comparison.yaml
config/cantilever_beam/: beam_config.yaml  beam_config_seq1e-5.yaml  beam_config_seq1e-5_flipped_X.yaml  beam_config_seq1e-5_flipped_Y.yaml  beam_config_seq1e-5_flipped_Z.yaml  beam_config_seq1e-5subdiv16.yaml  beam_config_seq1e-5subdiv16_flippedX.yaml  beam_config_seq1e-5subdiv16_flippedY.yaml  beam_config_seq1e-5subdiv16_flippedZ.yaml  beam_config_seqr10iter1e-5.yaml  beam_config_seqr1e-5.yaml  beam_config_seqr1e-5_flipped_Z.yaml  beam_config_seqr1e-6.yaml  beam_config_simul1e-5.yaml  firstorder_beam_config.yaml  firstorder_beam_config_cube.yaml  firstorder_beam_config_cube_paper_exp.yaml
config/initial_deformation/: initial_deformation_config.yaml
config/static_loading/: static_loading_config.yaml
config/tissue_grasping/: config.yaml  trachea.yaml  trachea_virtuoso.yaml
include/: Config.hpp  ElasticMaterial.hpp  ElasticMeshObject.hpp  MeshObject.hpp  MeshUtils.hpp  RigidMeshObject.hpp  Simulation.hpp  TextRenderingViewer.hpp  XPBDMeshObject.hpp
include/collision/: CollisionScene.hpp
include/common/: MonitoredVector.hpp  SimulationInput.hpp  SimulationTypeDefs.hpp  TypeList.hpp  VariadicContainer.hpp  VariadicVectorContainer.hpp  XPBDEnumTypes.hpp  XPBDTypedefs.hpp  colors.hpp  types.hpp
include/config/: BeamSimulationConfig.hpp  BeamStretchSimulationConfig.hpp  Config.hpp  ElasticMaterialConfig.hpp  ElasticMeshObjectConfig.hpp  FastFEMMeshObjectConfig.hpp  FirstOrderXPBDMeshObjectConfig.hpp  InitialDeformationSimulationConfig.hpp  MeshObjectConfig.hpp  OLD_MeshObjectConfig.hpp  OLD_RigidMeshObjectConfig.hpp  ObjectConfig.hpp  (+14 more)
resource/: homer.mesh  homer.stl  stanford-bunny.mesh  stanford-bunny.vtu
ros_workspace/src/sim_bridge/: CMakeLists.txt  package.xml
ros_workspace/src/sim_bridge/include/sim_bridge/: SimBridge.hpp  VirtuosoSimBridge.hpp
ros_workspace/src/sim_bridge/src/: SimBridge.cpp  sim_bridge.cpp  sim_bridge_node.cpp
scripts/: install.sh  install_dependencies.sh  set_env.sh
src/: BeamSimulation.cpp  ElasticMeshObject.cpp  MeshObject.cpp  MeshUtils.cpp  ResidualSimulation.cpp  RigidMeshObject.cpp  Simulation.cpp  TextRenderingViewer.cpp  TissueGraspingSimulation.cpp  XPBDMeshObject.cpp  beam_test_main.cpp  main.cpp  tissue_grasping_test_main.cpp
src/common/: CMakeLists.txt
src/config/: CMakeLists.txt  Config.cpp  ElasticMaterialConfig.cpp  ElasticMeshObjectConfig.cpp  MeshObjectConfig.cpp  RigidMeshObjectConfig.cpp  SimulationConfig.cpp  XPBDMeshObjectConfig.cpp
src/config/simobject/: FirstOrderXPBDMeshObjectConfig.cpp  RigidMeshObjectConfig.cpp  RigidPrimitiveConfigs.cpp  VirtuosoArmConfig.cpp  VirtuosoRobotConfig.cpp  XPBDMeshObjectConfig.cpp
src/geometry/: BoxSDF.cpp  CMakeLists.txt  CylinderSDF.cpp  DeformableMeshSDF.cpp  DeformableSDF.cpp  EmbreeManager.cpp  Mesh.cpp  MeshSDF.cpp  SphereSDF.cpp  TetMesh.cpp  VirtuosoArmSDF.cpp  VirtuosoRobotSDF.cpp
src/geometry/embree/: EmbreeMeshGeometry.cpp  EmbreeScene.cpp  EmbreeTetMeshGeometry.cpp
src/graphics/: CMakeLists.txt  Easy3DBoxGraphicsObject.cpp  Easy3DCylinderGraphicsObject.cpp  Easy3DGraphicsScene.cpp  Easy3DMeshGraphicsObject.cpp  Easy3DSphereGraphicsObject.cpp  Easy3DTextRenderingViewer.cpp  Easy3DVirtuosoArmGraphicsObject.cpp  Easy3DVirtuosoRobotGraphicsObject.cpp  GraphicsScene.cpp  MeshGraphicsObject.cpp  TextRenderingViewer.cpp  Viewer.cpp
src/graphics/easy3d/: Easy3DBoxGraphicsObject.cpp  Easy3DCylinderGraphicsObject.cpp  Easy3DGraphicsScene.cpp  Easy3DMeshGraphicsObject.cpp  Easy3DSphereGraphicsObject.cpp  Easy3DTextRenderingViewer.cpp  Easy3DVirtuosoArmGraphicsObject.cpp  Easy3DVirtuosoRobotGraphicsObject.cpp
src/graphics/vtk/: CustomVTKInteractorStyle.cpp  VTKBoxGraphicsObject.cpp  VTKCylinderGraphicsObject.cpp  VTKGraphicsScene.cpp  VTKMeshGraphicsObject.cpp  VTKSphereGraphicsObject.cpp  VTKViewer.cpp  VTKVirtuosoArmGraphicsObject.cpp  VTKVirtuosoRobotGraphicsObject.cpp
src/haptics/: CMakeLists.txt  HapticDeviceManager.cpp
src/simobject/: CMakeLists.txt  ElasticMeshObject.cpp  FastFEMMeshObject.cpp  FirstOrderXPBDMeshObject.cpp  FirstOrderXPBDMeshObjectOLD.cpp  MeshObject.cpp  OLD_ElasticMeshObject.cpp  OLD_FastFEMMeshObject.cpp  OLD_FirstOrderXPBDMeshObject.cpp  RigidMeshObject.cpp  RigidObject.cpp  RigidPrimitives.cpp  VirtuosoArm.cpp  VirtuosoRobot.cpp  XPBDMeshObject.cpp
src/simulation/: BeamSimulation.cpp  BeamStretchSimulation.cpp  CMakeLists.txt  GraspingSimulation.cpp  InitialDeformationSimulation.cpp  OutputSimulation.cpp  PalpationSimulation.cpp  PushingSimulation.cpp  ResidualSimulation.cpp  Simulation.cpp  SimulationLogger.cpp  StaticLoadingSimulation.cpp  TissueGraspingSimulation.cpp  VirtuosoSimulation.cpp  VirtuosoTissueGraspingSimulation.cpp
src/solver/: CMakeLists.txt  Constraint.cpp  ConstraintDecorator.cpp  DeviatoricConstraint.cpp  ElementConstraint.cpp  HydrostaticConstraint.cpp  PrimaryResidualElementConstraint.cpp  XPBDGaussSeidelSolver.cpp  XPBDJacobiSolver.cpp  XPBDParallelJacobiSolver.cpp  XPBDSolver.cpp
src/solver/constraint/: AttachmentConstraint.cpp  DeformableDeformableCollisionConstraint.cpp  DeviatoricConstraint.cpp  HydrostaticConstraint.cpp  RigidDeformableCollisionConstraint.cpp  StaticDeformableCollisionConstraint.cpp
src/solver/xpbd_projector/: CombinedNeohookeanConstraintProjector.cpp
src/solver/xpbd_solver/: XPBDGaussSeidelSolverOLD.cpp  XPBDJacobiSolverOLD.cpp  XPBDParallelJacobiSolver.cpp  XPBDSolverOLD.cpp
src/utils/: CMakeLists.txt  GeometryUtils.cpp  MeshUtils.cpp
(+312 files in other folders)
